--- a/locale/en/index.json
+++ b/locale/en/index.json
@@ -178,7 +178,7 @@
     "keywords": "WebSim, SaaS, Coding Starter, SEO, AI, Playground, Multi-language, Creative, Automation",
     "og:title": "WebSim Vibe Coding Starter - Launch in 5 Minutes",
     "og:description": "Zero code, AI-powered website generation for entrepreneurs and innovators. SEO optimized and multi-language ready.",
-    "og:image": "https://websimstarter.borninsea.com/og-image.png",
+    "og:image": "https://websimstarter.metaprompt.deepsseek.diy/og-image.png",
     "og:image:alt": "WebSim Vibe Coding Starter Banner",
     "og:image:width": "1200",
     "og:image:height": "630",
