--- a/locale/en/privacy.json
+++ b/locale/en/privacy.json
@@ -4,7 +4,7 @@
     "keywords": "WebSim, Privacy Policy, Data Protection, SaaS, Coding Starter, AI, Website Builder",
     "og:title": "Privacy Policy - WebSim Vibe Coding Starter",
     "og:description": "Understand our commitment to your privacy when using WebSim Vibe Coding Starter.",
-    "og:image": "https://websimstarter.borninsea.com/og-image-privacy.png",
+    "og:image": "https://websimstarter.metaprompt.deepsseek.diy/og-image-privacy.png",
     "og:image:alt": "WebSim Vibe Privacy Policy Banner",
     "og:image:width": "1200",
     "og:image:height": "630",
