--- a/locale/zh/index.json
+++ b/locale/zh/index.json
@@ -177,7 +177,7 @@
     "keywords": "WebSim, SaaS, 编程启动器, SEO, AI, 实验区, 多语言, 创意, 自动化, 无代码",
     "og:title": "WebSim Vibe 编程启动器 - 5分钟上线",
     "og:description": "零代码，AI驱动的网站生成器，专为企业家和创新者设计。SEO优化，多语言支持。",
-    "og:image": "https://websimstarter.borninsea.com/og-image.png",
+    "og:image": "https://websimstarter.metaprompt.deepsseek.diy/og-image.png",
     "og:image:alt": "WebSim Vibe 编程启动器横幅",
     "og:image:width": "1200",
     "og:image:height": "630",
