--- a/locale/zh/privacy.json
+++ b/locale/zh/privacy.json
@@ -4,7 +4,7 @@
     "keywords": "WebSim, 隐私政策, 数据保护, SaaS, 编程启动器, AI, 网站构建器",
     "og:title": "隐私政策 - WebSim Vibe 编程启动器",
     "og:description": "了解我们对您在使用 WebSim Vibe 编程启动器时的隐私承诺。",
-    "og:image": "https://websimstarter.borninsea.com/og-image-privacy.png",
+    "og:image": "https://websimstarter.metaprompt.deepsseek.diy/og-image-privacy.png",
     "og:image:alt": "WebSim Vibe 隐私政策横幅",
     "og:image:width": "1200",
     "og:image:height": "630",
